Se ajusta la interfaz para envio de evidencia

--- a/src/css/reception.css
+++ b/src/css/reception.css
@@ -123,12 +123,9 @@ input[type="file"]::file-selector-button {
 }
 .custom-file-upload {
   display: inline-block;
-  padding: 12px 12px;
+  margin: 18px 12px;
   cursor: pointer;
   border-radius: 15px;
-  box-shadow: rgba(7, 33, 58, 0.12) 0px 0px 24px;
-  background-color: var(--color-dark-blue);
-  color: white;
   font-size: 16px;
 }
 #upload-icon {
@@ -139,8 +136,6 @@ input[type="file"]::file-selector-button {
   border-color: var(--color-green) !important;
 }
 .uploaded-images {
-    width: 360px;
-    margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
@@ -151,8 +146,8 @@ input[type="file"]::file-selector-button {
 }
 
 .image-preview {
-  display: inline-block;
-  margin: 10px;
+  display: flex;
+  margin: 5px 5px;
   position: relative;
 }
 
